--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <button (click)="circle()" class="circ"> circle</button>
 <button (click)="square()" class="squa"> squa</button>
 <button (click)="polygon()" class="poly"> poly</button>
+<button (click)="clear()" class="clear"> clear</button>
 
 <div id = "container"></div>
 
