--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -41,3 +41,14 @@
     position: relative;
 
 }
+
+.clear {
+    margin-left: 80px;
+    background-color: rgb(162, 173, 187);
+    width: 50px;
+    height: 50px;
+    border: 2px rgb(46, 44, 44) solid;
+    border-radius: 10px;
+    position: relative;
+
+}
