--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<button (click)="rect()" class="rect"> rect</button>
-<button (click)="circle()" class="circ"> circle</button>
-<button (click)="square()" class="squa"> squa</button>
-<button (click)="polygon()" class="poly"> poly</button>
-<button (click)="clear()" class="clear"> clear</button>
+<div class="board" id="board"></div>
+<div class="buttons">
+    <div class="shapes">Shapes</div>
+    <button (click)="rect()" class="rect"> ▭</button>
+    <button (click)="circle()" class="circ"> ○</button>
+    <button (click)="square()" class="squa"> □</button>
+    <button (click)="polygon()" class="poly"> ⬠</button>
+    <button (click)="clear()" class="clear"> c</button>
+</div>
 
-<div id = "container"></div>
 
