--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,54 +1,103 @@
+.board {
+    margin-left: 100px;
+    margin-top: 70px;
+    width: 1000px;
+    height: 500px;
+    border: 2px solid red;
+    position: absolute;
+}
+
+.buttons {
+    word-wrap: break-word;
+    margin-top: 70px;
+    margin-left: 1150px;
+    width: 200px;
+    height: 500px;
+    border: 2px solid red;
+    position: absolute;
+}
+
+.shapes {
+    padding-top: 100px;
+    font-size: 23px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-left: 10px;
+}
 
 .circ {
-    margin-left: 40px;
-    background-color: rgb(162, 173, 187);
-    width: 50px;
-    height: 50px;
-    border: 2px rgb(46, 44, 44) solid;
+    font-size: 30px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
+    height: 40px;
+    border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
     position: relative;
 }
 
 .rect {
-    margin-left: 30px;
-    background-color: rgb(162, 173, 187);
-    width: 50px;
-    height: 50px;
-    border: 2px rgb(46, 44, 44) solid;
+    font-size: 20px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
+    height: 40px;
+    border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
     position: relative;
-
 }
 
 .squa {
-    margin-left: 40px;
-    background-color: rgb(162, 173, 187);
-    width: 50px;
-    height: 50px;
-    border: 2px rgb(46, 44, 44) solid;
+    font-size: 30px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
+    height: 40px;
+    border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
     position: relative;
-
 }
 
 .poly {
-    margin-left: 60px;
-    background-color: rgb(162, 173, 187);
-    width: 50px;
-    height: 50px;
-    border: 2px rgb(46, 44, 44) solid;
+    font-size: 30px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
+    height: 40px;
+    border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
     position: relative;
-
 }
 
 .clear {
-    margin-left: 80px;
-    background-color: rgb(162, 173, 187);
-    width: 50px;
-    height: 50px;
-    border: 2px rgb(46, 44, 44) solid;
+    font-size: 30px;
+    background-color: rgb(255, 255, 255);
+    width: 40px;
+    height: 40px;
+    border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
     position: relative;
 
 }
+
+
+
+.rect:hover{
+    background-color: rgb(181, 192, 192);
+}
+.circ:hover{
+    background-color: rgb(181, 192, 192);
+}
+.squa:hover{
+    background-color: rgb(181, 192, 192);
+}
+.poly:hover{
+    background-color: rgb(181, 192, 192);
+}
+.clear:hover{
+    background-color: rgb(181, 192, 192);
+}
+
+
+
+
+
+
+
+
+
