--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,27 +10,37 @@
 .options {
     margin-top: 70px;
     margin-left: 1150px;
-    width: 200px;
+    width: 250px;
     height: 500px;
     border: 2px solid red;
     position: absolute;
     border-radius: 20px;
 }
 
-/* .shapes {
-    padding-top: 100px;
+
+.shapes {
+    margin-top: 20px;
     font-size: 23px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     padding-left: 10px;
     position: absolute;
-} */
+}
 
-.shapesParent {
-    margin-top: 0px;
-    width: 200px;
+
+.shapes {
+    word-wrap: break-word;
+    margin-top: 10px;
+    margin-left: 10px;
+    width: 230px;
     height: 150px;
     background-color: beige;
-    position: absolute;
+    border-radius: 20px;
+}
+
+.text {
+    margin-top: 30px;
+    margin-left: 10px;
+    font-size: 25px;
 }
 
 .circ {
@@ -136,7 +146,7 @@
 }
 .free:hover{
     background-color: rgb(181, 192, 192);
-}
+} 
 
 
 
