--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,154 +1,186 @@
 .board {
-    margin-left: 100px;
-    margin-top: 70px;
-    width: 1000px;
-    height: 500px;
-    border: 2px solid red;
+    margin-left: 2.5%;
+    margin-top: 3.5%;
+    border: 2px solid rgba(31, 48, 65, 0.69);
+    border-radius: 20px;
     position: absolute;
 }
 
 .options {
-    margin-top: 70px;
-    margin-left: 1150px;
-    width: 250px;
-    height: 500px;
-    border: 2px solid red;
+    margin-top: 3.5%;
+    margin-left: 77%;
+    width: 300px;
+    height: 600px;
+    border: 2px solid rgba(31, 48, 65, 0.69);
     position: absolute;
     border-radius: 20px;
 }
 
-
 .shapes {
-    margin-top: 20px;
-    font-size: 23px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-left: 10px;
-    position: absolute;
-}
-
-
-.shapes {
-    word-wrap: break-word;
-    margin-top: 10px;
+    background-color: rgba(28, 47, 64, 0.318);
     margin-left: 10px;
-    width: 230px;
-    height: 150px;
-    background-color: beige;
+    margin-top: 10px;
+    height: 205px;
+    width: 280px;
     border-radius: 20px;
+    position: absolute;
 }
 
 .text {
-    margin-top: 30px;
-    margin-left: 10px;
+    color: rgb(22, 41, 57);
+    padding-left: 25px;
+    margin-top: 10px;
+    margin-bottom: 25px;
+    font-size: 35px;
+    font-family: Tahoma;
+    position: relative;
+}
+
+.rectangle {
+    background-color: rgb(255, 255, 255);
+    font-size: 30px;
+    width: 45px;
+    height: 45px;
+    margin-left: 25px;
+    border: 2px rgb(255, 255, 255) solid;
+    border-radius: 10px;
+    position: fixed;
+}
+
+.circle {
+    background-color: rgb(255, 255, 255);
     font-size: 25px;
-}
-
-.circ {
-    font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
+    margin-left: 85px;
     border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
-    position: relative;
+    position: fixed;
 }
 
-.rect {
+.square {
+    background-color: rgb(255, 255, 255);
     font-size: 20px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
+    margin-left: 145px;
     border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
+    overflow: hidden;
     position: relative;
 }
 
-.squa {
+.polygon {
+    background-color: rgb(255, 255, 255);
     font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
+    margin-left: 15px;
     border: 2px rgb(255, 255, 255) solid;
     border-radius: 10px;
-    position: relative;
-}
-
-.poly {
-    font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
-    border: 2px rgb(255, 255, 255) solid;
-    border-radius: 10px;
-    position: relative;
-}
-
-.ellipse {
-    font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
-    border: 2px rgb(255, 255, 255) solid;
-    border-radius: 10px;
-    position: relative;
-}
-
-.triangle {
-    font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
-    border: 2px rgb(255, 255, 255) solid;
-    border-radius: 10px;
-    position: relative;
-}
-
-.line {
-    font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
-    border: 2px rgb(255, 255, 255) solid;
-    border-radius: 10px;
-    position: relative;
-}
-
-.free {
-    font-size: 30px;
-    background-color: rgb(255, 255, 255);
-    width: 40px;
-    height: 40px;
-    border: 2px rgb(255, 255, 255) solid;
-    border-radius: 10px;
-    position: relative;
-}
-
-.rect:hover{
-    background-color: rgb(181, 192, 192);
-}
-.circ:hover{
-    background-color: rgb(181, 192, 192);
-}
-.squa:hover{
-    background-color: rgb(181, 192, 192);
-}
-.poly:hover{
-    background-color: rgb(181, 192, 192);
-}
-.ellipse:hover{
-    background-color: rgb(181, 192, 192);
-}
-.triangle:hover{
-    background-color: rgb(181, 192, 192);
-}
-.line:hover{
-    background-color: rgb(181, 192, 192);
-}
-.free:hover{
-    background-color: rgb(181, 192, 192);
+    overflow: hidden;
+    position: fixed;
 } 
 
+.ellipse {
+    background-color: #ffffff;
+    font-size: 30px;
+    width: 45px;
+    height: 45px;
+    margin-top: 60px;
+    left: 80%;
+    border: 2px rgb(255, 255, 255) solid;
+    border-radius: 10px;
+    overflow: hidden;
+    position: fixed;
+} 
 
+.triangle {
+    background-color: rgb(255, 255, 255);
+    font-size: 30px;
+    width: 45px;
+    height: 45px;
+    margin-top: 60px;
+    left: 83.9%;
+    border: 2px rgb(255, 255, 255) solid;
+    border-radius: 10px;
+    overflow: hidden;
+    position: fixed;
+} 
+
+.line {
+    background-color: rgb(255, 255, 255);
+    font-size: 25px;
+    width: 45px;
+    height: 45px;
+    margin-top: 60px;
+    left: 87.8%;
+    border: 2px rgb(255, 255, 255) solid;
+    border-radius: 10px;
+    overflow: hidden;
+    position: fixed;
+} 
+
+.freeHand {
+    background-color: rgb(255, 255, 255);
+    font-size: 25px;
+    width: 45px;
+    height: 45px;
+    margin-top: 60px;
+    left: 91.7%;
+    border: 2px rgb(255, 255, 255) solid;
+    border-radius: 10px;
+    overflow: hidden;
+    position: fixed;
+} 
+
+.rectangle:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.circle:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.square:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.polygon:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.ellipse:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.triangle:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.line:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
+
+.freeHand:hover {
+    transform:scale(1.2,1.2);
+    -webkit-transform:scale(1.2,1.2);
+    -moz-transform:scale(1.2,1.2);
+}
 
 
 
