--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,8 +9,8 @@
 .options {
     margin-top: 0.5%;
     margin-left: 82%;
-    width: 250px;
-    height: 700px;
+    width: 16.5%;
+    height: 95%;
     border: 2px solid rgba(31, 48, 65, 0.69);
     position: absolute;
     display:inline-block;
