--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,7 +39,7 @@
     margin-top: 8px;
     height: 190px;
     width: 230px;
-    border-radius: 20px;    
+    border-radius: 20px;
 }
 
 .clearOperation {
@@ -54,7 +54,7 @@
     height: 50px;
     width: 220px;
     border: none;
-    border-radius: 20px; 
+    border-radius: 20px;
 }
 
 .title {
@@ -157,6 +157,16 @@
     position: relative;
 }
 
+.btnOperations:hover {
+  transform:scale(1.2,1.2);
+  -webkit-transform:scale(1.2,1.2);
+  -moz-transform:scale(1.2,1.2);
+}
+
+.btnOperations:active{
+  background-color: #62666846;
+}
+
 
 
 /*
@@ -194,4 +204,4 @@
 
 
 
- 
+
