--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <p class="title">Shapes</p>
     <div class="buttonShapes">
       <button (click)="drawShape($event)" title="rectangle" class="button">▭</button>
-      <button (click)="drawShape($event)" title="circle" class="button">◯</button>
+      <button (click)="drawShape($event)" title="circle"  class="button circle">◯</button>
       <button (click)="drawShape($event)" title="square" class="button square">⬜</button>
       <button (click)="drawShape($event)" title="polygon" class="button">⬠</button>
       <button (click)="drawShape($event)" title="ellipse" class="button">⬭</button>
@@ -13,7 +13,65 @@
       <button (click)="freeHand($event)" title="freehand" class="button">🖍</button>
     </div>
   </div>
+  
   <div class="colors">
+
+    <div class="title1">Color:       fill:</div>
+
+    <div class="title2">
+      <input [(ngModel)]="color" class="aligncolor" type="color">
+      <button (click)="fillshape()" class="fill">
+        <i class='fas fa-fill-drip'></i>
+      </button>
+    </div>
+
+    <div class="title3">
+      <span class="txt">Size: </span>
+      <input [(ngModel)]="size" class="size" type="range" min="1" max="100" value="5">
+    </div>
+
+    <div class="title4">
+      <button (click)="undo()" class="btn">Undo <i class='fas fa-undo'></i></button>
+      <button (click)="redo()" class="btn" >Redo <i class='fas fa-redo'></i></button>
+      <button (click)="copy()" class="btn" >Copy <i class='far fa-clone'></i></button>
+      <button (click)="delete()" class="btn" >Erase <i class='fas fa-eraser'></i></button>
+    </div>
+
+  </div>
+
+  <div class="operations">
+    <p class="title">Operations</p>
+    <div class="operationsFunctions">
+
+      <button (click)="save($event)" class="btn save">Save <i class="fa fa-download"></i></button> 
+      <button class="btn" (click)="load($event)">load <i class="fa fa-upload"></i></button>
+      <input class="loadfile" id="inputTag" type="file">
+
+    </div>
+  </div>
+<!-- <button (click)="undo()" title="undo" class="btnOperations" style="font-size: 36px; color: rgba(0, 0, 0, 0.722);">↶</button>
+      <button (click)="redo()" style="font-size: 36px; color: rgba(0, 0, 0, 0.722);" class="btnOperations">↷</button>
+      <button (click)="copy()" class="btnOperations" style="font-size: 35px; color: rgba(0, 0, 0, 0.722);">⧉</button>
+      <button (click)="delete()" style="color: rgba(0, 0, 0, 0.722);" title="delete" class="btnOperations">🗑️</button> -->
+     
+
+
+
+      <!-- <button (click)="save($event)" class="btnOperations" style="font-size: 34px ;">⤓</button>
+      <input type="text" [(ngModel)]="filename" />
+      <label for="inputTag" style="font-size: 35px;">⤒
+        <input (change)="load($event)" id="inputTag" type="file" style="display:none ;"/>
+      </label> -->
+
+      <!-- <form (ngSubmit)="save($event)" class="save">
+        <div id="choose">Choose the file type:</div>
+        <input type="radio" value="JSON" id="json" name="filetype" [(ngModel)]="form"><label for="json">json</label>
+        <input type="radio" value="XML" id="json" name="filetype" [(ngModel)]="form"><label for="xml">xml</label><br>
+        <button type="submit" class="btnOperations save">Save <i class="fa fa-download"></i></button> 
+      </form> -->
+
+ <!--
+  <!-- <div class="colors">
     <p class="title">Colors</p>
     <div class="functions">
 
@@ -34,25 +92,94 @@
 
     </div>
 
-  </div>
-  <div class="operations">
+  </div> -->
+
+  <!-- <table class="colors"> 
+    <tbody>
+      <tr>
+        <td>
+          <span class="txt">Color: </span>
+          <input [(ngModel)]="color" class="aligncolor" type="color">
+        </td>
+        <td>
+          <span class="txt">Fill: </span>
+          <button (click)="fillshape()" class="fill">
+            <i class='fas fa-fill-drip'></i>
+          </button>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2">
+          <span class="txt">Size: </span>
+          <input [(ngModel)]="size" class="size" type="range" min="1" max="100" value="5">
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <button (click)="undo()" class="btnOperations txt">Undo <i class='fas fa-undo'></i></button>
+        </td>
+        <td>
+          <button (click)="redo()" class="btnOperations txt" >Redo <i class='fas fa-redo'></i></button>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <button (click)="copy()" class="btnOperations txt" >Copy <i class='far fa-clone'></i></button>
+        </td>
+        <td>
+          <button (click)="delete()" class="btnOperations txt" >Erase <i class='fas fa-eraser'></i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table> -->
+
+  <!-- <div class="operations">
     <p class="title">Operations</p>
     <div class="operationsFunctions">
-      <button (click)="undo()" class="btnOperations">Undo</button>
-      <button (click)="redo()" class="btnOperations">Redo</button>
-      <button (click)="copy()" class="btnOperations">Copy</button>
-      <button (click)="delete()" class="btnOperations">Delete</button>
-      <button (click)="save($event)" class="btnOperations">Save</button>
+       <button (click)="undo()" title="undo" class="btnOperations" style="font-size: 36px; color: rgba(0, 0, 0, 0.722);">↶</button>
+      <button (click)="redo()" style="font-size: 36px; color: rgba(0, 0, 0, 0.722);" class="btnOperations">↷</button>
+      <button (click)="copy()" class="btnOperations" style="font-size: 35px; color: rgba(0, 0, 0, 0.722);">⧉</button>
+      <button (click)="delete()" style="color: rgba(0, 0, 0, 0.722);" title="delete" class="btnOperations">🗑️</button> -->
+     
+
+
+
+      <!-- <button (click)="save($event)" class="btnOperations" style="font-size: 34px ;">⤓</button>
       <input type="text" [(ngModel)]="filename" />
-      <label for="inputTag">
-        load
+      <label for="inputTag" style="font-size: 35px;">⤒
         <input (change)="load($event)" id="inputTag" type="file" style="display:none ;"/>
-      </label>
+      </label> -->
+
+      <!-- <form (ngSubmit)="save($event)" class="save">
+        <div id="choose">Choose the file type:</div>
+        <input type="radio" value="JSON" id="json" name="filetype" [(ngModel)]="form"><label for="json">json</label>
+        <input type="radio" value="XML" id="json" name="filetype" [(ngModel)]="form"><label for="xml">xml</label><br>
+        <button type="submit" class="btnOperations save">Save <i class="fa fa-download"></i></button> 
+      </form> -->
+
+
+
+
+      <!-- <button (click)="save($event)" class="btnOperations save">Save <i class="fa fa-download"></i></button> 
+
+      <button class="btnOperations" (click)="load($event)">load <i class="fa fa-upload"></i></button>
+      <input class="loadfile" id="inputTag" type="file">
+
+
+
     </div>
-  </div>
-  <div class="clearOperation">
-    <button (click)="clear()" class="btnOperations">Clear</button>
-  </div>
+  </div> -->
+  <button (click)="clear()" class="clear">Clear   ✘</button> -->
+</div>
+
+<div *ngIf="pop" class="popScreen">
+
+  <input class="popup" [(ngModel)]="filename" type="text" id="fileName" placeholder="Enter File Name">
+  <button class="popup" (click)="chooseFile($event)" value="js">Json</button>
+  <br>
+  <button class="popup" (click)="chooseFile($event)" value="xm">Xml</button>
+  <br>
+  <button class="popup" (click)="chooseFile($event)" value="close">Close</button>
 
 </div>
 
